projects/kit/components/segmented/segmented.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

tui-segmented {
    position: relative;
    display: flex;
    color: var(--tui-background-base);
    background: var(--tui-background-neutral-1);
    overflow: hidden;

    &[data-size='s'] {
        --t-padding: 0.5rem;
        --t-gap: 0.5rem;
        --t-margin: -0.125rem;
        --t-height: var(--tui-height-s);

        font: var(--tui-font-text-s);
        border-radius: var(--tui-radius-m);

        tui-icon {
            font-size: 1rem;
        }
    }

    &[data-size='m'] {
        --t-padding: 0.875rem;
        --t-gap: 1rem;
        --t-margin: -0.375rem;
        --t-height: var(--tui-height-m);

        font: var(--tui-font-text-m);
        border-radius: var(--tui-radius-m);
    }

    &[data-size='l'] {
        --t-padding: 1.25rem;
        --t-gap: 1rem;
        --t-margin: -0.375rem;
        --t-height: var(--tui-height-l);

        font: var(--tui-font-text-l);
        border-radius: var(--tui-radius-l);

        > *::before {
            block-size: 1.25rem;
        }
    }

    & > a,
    & > button,
    & > label,
    & > label > input:not([tuiRadio]) {
        .transition(~'color, background, opacity, border-image');
        .button-clear();

        position: relative;
        display: flex;
        align-items: center;
        justify-content: center;
        block-size: var(--t-height);
        white-space: nowrap;
        gap: var(--t-gap);
        margin: 0;
        padding: 0 var(--t-padding);
        color: var(--tui-text-primary);
        overflow: hidden;
        cursor: pointer;
        font: inherit;
        border-radius: inherit;
        border: 0.125rem solid transparent;
        background-clip: padding-box;
        box-sizing: border-box;
        border-image: linear-gradient(var(--tui-border-normal), transparent) 1 / 0 0 25% 0.5 / 0 0 100 0.5;
        clip-path: polygon(
            -1rem calc(50% - 0.5rem),
            1px calc(50% - 0.5rem),
            1px 0,
            100% 0,
            100% 100%,
            1px 100%,
            1px calc(50% + 0.5rem),
            -1rem calc(50% + 0.5rem)
        );

        > * {
            margin: 0 var(--t-margin);
        }

        &:focus-visible {
            outline: 0.125rem solid var(--tui-border-focus);
            outline-offset: -0.25rem;
        }

        @media @tui-mouse {
            &:not(.tui-segmented_active):not(:active):hover {
                background-color: var(--tui-background-neutral-1-hover);
            }

            &:not(.tui-segmented_active):not(:active):hover,
            &:not(.tui-segmented_active):not(:active):hover + * {
                border-image: linear-gradient(var(--tui-border-normal), transparent) 1 / 0 0 25% 0.5 / 100 0 0 0.5;
            }

            &.tui-segmented_active:hover {
                opacity: var(--tui-disabled-opacity);
            }
        }

        &:active,
        &:active + *,
        &.tui-segmented_active,
        &.tui-segmented_active + * {
            border-image: linear-gradient(var(--tui-border-normal), transparent) 1 / 0 0 25% 0.5 / 100 0 0 0.5;
        }
    }

    & > label > input:not([tuiRadio]) {
        position: absolute;
        top: -0.125rem;
        left: -0.125rem;
        right: -0.125rem;
        bottom: -0.125rem;
        background: transparent !important;
    }

    &::before {
        .transition(~'top, left, width');

        content: '';
        position: absolute;
        left: var(--t-left);
        top: var(--t-top);
        block-size: var(--t-height);
        inline-size: var(--t-width);
        border-radius: inherit;
        background: currentColor;
        background-clip: padding-box;
        border: 0.125rem solid transparent;
        box-sizing: border-box;
        filter: drop-shadow(0 0.25rem 1.25rem rgba(0, 0, 0, 0.1));
    }
}

[tuiTheme='dark'] tui-segmented,
tui-segmented[tuiTheme='dark'] {
    --tui-background-base: var(--tui-background-neutral-1-hover);
}

